<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menIndividual"
            app:cardBackgroundColor="@color/amarelo"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mask"
                android:contentDescription="@string/Individualmente"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Individualmente" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menGrupo"
            app:cardBackgroundColor="@color/azulclaro"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/group"
                android:contentDescription="@string/EmGrupo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/EmGrupo" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menCasa"
            app:cardBackgroundColor="@color/roxo"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/house"
                android:contentDescription="@string/EmCasa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/EmCasa"
                android:layout_gravity="center_horizontal"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menTrabalho"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/work"
                android:contentDescription="@string/NoTrabalho"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/NoTrabalho"
                android:layout_gravity="center_horizontal"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menPublico"
            app:cardBackgroundColor="@color/verde"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bus2"
                android:layout_gravity="center"
                android:contentDescription="@string/TransPublico"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/TransPublico" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="5dp"
            android:id="@+id/menParticular"
            app:cardBackgroundColor="@color/vermelho"
            app:cardCornerRadius="10dp"
            android:elevation="6dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/car"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:contentDescription="@string/TransParticular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/TransParticular" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/botao"
            android:text="Sair"
            android:textColor="@color/branco"
            />

    </LinearLayout>


</LinearLayout>